[project]
name = "stellar-forge"
version = "0.1.0"
description = "A project you can use to simulate real world database operations"
readme = "README.md"
authors = [
    { name = "Eric Thanenthiran", email = "eric.thanenthiran@tasman.ai" }
]
requires-python = "==3.14"
dependencies = [
    "faker>=37.11.0",
    "sqlmodel>=0.0.27",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "isort>=7.0.0",
    "mkdocs>=1.6.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "ty>=0.0.1a24",
]
